Fix Java 8 build breaks in OIDC device flow
The JDK 8 CI job failed to compile two Java 9+ constructs that a local
JDK 25 build silently accepts (newer rt.jar has the APIs, and -source
without --release does not enforce the Java 8 platform):

- Utf16Sink declared a private interface method, putUnicodeEscape, a
  Java 9 feature. Move it to DisplaySafe as a package-private static
  helper, putUnicodeEscape(Utf16Sink, int); the two putAsPrintable
  overloads now call it. DisplaySafe already owns the display-escaping
  policy and shares the package, so the helper stays out of the public
  API. The escape logic is moved verbatim.

- OidcDeviceAuth.urlEncode called URLEncoder.encode(String, Charset),
  a Java 10 overload. Switch to the Java 8 encode(String, String) form
  and catch the (unreachable for UTF-8) UnsupportedEncodingException.

Verified: the three changed files compile under --release 8, the full
core module compiles, and LineSenderExceptionTest,
LineHttpSenderErrorResponseTest, JsonLexerTest and OidcDeviceAuthTest
stay green (156 tests).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>